# nowellpoint-aws-api/src/main/java/com/nowellpoint/aws/api/resource/MetadataBackupRequestResource.java
@@ -1,0 +1,27 @@
+package com.nowellpoint.aws.api.resource;
+
+import javax.ws.rs.Consumes;
+import javax.ws.rs.FormParam;
+import javax.ws.rs.POST;
+import javax.ws.rs.Path;
+import javax.ws.rs.Produces;
+import javax.ws.rs.core.MediaType;
+import javax.ws.rs.core.Response;
+
+import org.hibernate.validator.constraints.NotEmpty;
+
+@Path("metadata-backup-request")
+public class MetadataBackupRequestResource {
+
+	@POST
+	@Consumes(MediaType.APPLICATION_FORM_URLENCODED)
+	@Produces(MediaType.APPLICATION_JSON)
+	public Response submitMetadataBackupRequest(@FormParam("id") @NotEmpty(message = "Missing Token Id") String id,
+			@FormParam("instanceUrl") @NotEmpty(message = "Missing Instance Url") String instanceUrl,
+			@FormParam("accessToken") @NotEmpty(message = "Missing Access Token") String accessToken,
+			@FormParam("refreshToken") @NotEmpty(message = "Missing RefreshToken") String refreshToken) {
+		
+		return null;
+		
+	}	
+}
