# target/swagger.json
@@ -1,27 +1,78 @@
 {
   "swagger" : "2.0",
   "info" : {
-    "version" : "v1",
-    "title" : "Swagger Maven Plugin Sample"
+    "description" : "API for all interactions with the Nowellpoint integration platform",
+    "version" : "v1.0",
+    "title" : "The Nowellpoint API"
   },
   "tags" : [ {
-    "name" : "time"
+    "name" : "oauth"
   } ],
   "paths" : {
     "/oauth/token" : {
       "post" : {
-        "tags" : [ "time" ],
-        "summary" : "Get the current time",
-        "description" : "Returns the time as a string",
+        "tags" : [ "oauth" ],
+        "summary" : "Authenticate with the API",
+        "description" : "Returns the OAuth Token",
         "operationId" : "authenticate",
         "produces" : [ "application/json" ],
+        "parameters" : [ {
+          "name" : "Authorization",
+          "in" : "header",
+          "description" : "basic authorization header",
+          "required" : true,
+          "type" : "string",
+          "default" : ""
+        } ],
         "responses" : {
           "200" : {
             "description" : "successful operation",
             "schema" : {
-              "type" : "string"
+              "$ref" : "#/definitions/Token"
             }
           }
+        }
+      },
+      "delete" : {
+        "tags" : [ "oauth" ],
+        "summary" : "Expire the OAuth token",
+        "description" : "Access to the API will be revoked until a new token is issued",
+        "operationId" : "revoke",
+        "parameters" : [ {
+          "name" : "Authorization",
+          "in" : "header",
+          "description" : "bearer authorization header",
+          "required" : true,
+          "type" : "string",
+          "default" : ""
+        } ],
+        "responses" : {
+          "204" : {
+            "description" : "successful operation"
+          }
+        }
+      }
+    }
+  },
+  "definitions" : {
+    "Token" : {
+      "type" : "object",
+      "properties" : {
+        "refreshToken" : {
+          "type" : "string"
+        },
+        "tokenType" : {
+          "type" : "string"
+        },
+        "expiresIn" : {
+          "type" : "integer",
+          "format" : "int64"
+        },
+        "stormpathAccessTokenHref" : {
+          "type" : "string"
+        },
+        "accessToken" : {
+          "type" : "string"
         }
       }
     }
